--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <title>React App</title>
+    <title>BottmzUp - Eventing at it's finest</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
