--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="You Can't be in Mumbai and not enjoy its nightlife. We bring to you mumbai and all of its glory. Enjoy various events, parties and exclusive tickets. Take a look around. Maybe you'll find a piece of you waiting everlong."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
