All big change in the app

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,21 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/78b9613813.js" crossorigin="anonymous"></script>
 
+    <!-- SEO  -->
+    <meta name="google-site-verification" content="IwjV3crvQ37iW8afDhiIkcrGEedHL3WcZr7hOYRK8Zk" />
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>BottmzUp | Find The Best Events Near You | Eventing at it's finest</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W33XETQ50X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W33XETQ50X');
+</script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
