google analytics change

--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,13 @@
     <title>BottmzUp | Find The Best Events Near You | Eventing at it's finest</title>
   </head>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-W33XETQ50X"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZB756ZZ9W4"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-W33XETQ50X');
+    gtag('config', 'G-ZB756ZZ9W4');
   </script>
   <body>
     <div id="root"></div>
