--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,38 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="You Can't be in Mumbai and not enjoy its nightlife. We bring to you mumbai and all of its glory. Enjoy various events, parties and exclusive tickets. Take a look around. Maybe you'll find a piece of you waiting everlong."
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    
+    <!-- Bootstrap CSS CDN  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Font Awesome CDN  -->
     <script src="https://kit.fontawesome.com/78b9613813.js" crossorigin="anonymous"></script>
 
     <!-- SEO  -->
     <meta name="google-site-verification" content="IwjV3crvQ37iW8afDhiIkcrGEedHL3WcZr7hOYRK8Zk" />
 
+    <!-- Keywords -->
+    <meta name="title" content="BottmzUp">
+    <meta name="description" content="Are you tired of the same old routine? Do you crave excitement and adventure? Look no further than BottmzUp, the ultimate event ticket booking platform. With a wide variety of events to choose from, including concerts, festivals, and sporting events, you'll always find something new and exciting to do. Book your tickets with BottmzUp today and start living life to the fullest!">
+    <meta name="keywords" content=" club, party, ticket booking, nightlife, events, BottmzUp, music, DJ, dance, drinks, cocktails, VIP, guest list, bottle service, table reservations, party planning, party scene, socializing, networking, exclusive events, entertainment, live performances, artist appearances, festival, celebration, fun, excitement, adventure, partygoers, urban, trendy, popular, nightlife destinations, after-hours, late-night, parties, nightlife culture, party enthusiasts, party animals, party lifestyle, party venues, party experiences, nightlife industry, party promotions, nightlife marketing, nightclubbing, nightlife entertainment, party crowd, party culture, party vibe, party atmosphere, party booking.">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1">
+    
+    <!-- Bootsrap Icons CDN  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
     <title>BottmzUp | Find The Best Events Near You | Eventing at it's finest</title>
   </head>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZB756ZZ9W4"></script>
   <script>
@@ -36,6 +49,7 @@
   <body>
     <div id="root"></div>
 
+    <!-- Bootstrap JS Script  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
